let's make this u

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,27 @@
-/_build
-/cover
-/deps
-/doc
-/.fetch
-erl_crash.dump
-*.ez
-*.beam
-/config/*.secret.exs
-.elixir_ls/
+**/.backup
+**/gst.im
+a
+b
+c
+d
+e
+f
+g
+h
+i
+j
+k
+l
+m
+n
+o
+p
+q
+r
+s
+t
+v
+w
+x
+y
+z
